# CryptoHelper

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LOCAL_DEPLOY.md  config.yaml  fly.toml  logs.txt  process.md  project.md  pyproject.toml  run_scanner.bat  start.bat  state.json
.github/workflows/: ci.yml  deploy.yml  scan.yml
data/: state.json
src/: config.py  main.py  notifier.py  scheduler.py  state_manager.py
src/data/: fetcher.py  market_filter.py
src/indicators/: technical.py
src/strategies/: base.py  breakout.py  breakout_short.py  divergence.py  divergence_short.py  trend.py  trend_short.py
tests/: test_indicators.py  test_notifier.py  test_state_manager.py  test_strategies.py
